# DSA_1

./: README.md
extra-02/: CMakeLists.txt  main.c
extra-02/headers/: labda_simple.h
extra-02/sources/: labda_simple.c
extra-03/: CMakeLists.txt  main.c
extra-03/headers/: student.h
extra-03/sources/: student.c
extra-04/: CMakeLists.txt  main.c
lab-03/: CMakeLists.txt  main.c
lab-04/: CMakeLists.txt  main.c
lab-04/headers/: array.h  constants.h
lab-04/sources/: array.c
lab-05/: CMakeLists.txt  main.c
lab-05/headers/: stack.h
lab-05/sources/: stack.c
lab-06/: CMakeLists.txt  main.c
lab-06/headers/: circular_queue.h  simple_queue.h
lab-06/sources/: circular_queue.c  simple_queue.c
lab-07/: CMakeLists.txt  main.c
lab-07/headers/: labda_tomb.h
lab-07/sources/: labda_tomb.c
lab-08/: CMakeLists.txt  main.c
lab-08/headers/: labda_stack.h
lab-08/sources/: labda_stack.c
lab-09/: CMakeLists.txt  main.c
lab-09/headers/: lista.h
lab-09/sources/: lista.c
lab-11/: CMakeLists.txt  main.c
lab-11/headers/: barat.h  bin_s_t.h  lista.h
lab-11/sources/: bin_s_t.c  lista.c
